[tool.poetry]
name = "workingtime"
version = "0.1.0"
description = ""
authors = ["Pablo Manso <92manso@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
test = 'scripts:test'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
